Updated the Starter package to make it a async, threads are now configurable, and Beans are now conditionally created and now can be override If client have those beans already present

--- a/log-sentinel-spring-boot-starter/pom.xml
+++ b/log-sentinel-spring-boot-starter/pom.xml
@@ -28,6 +28,12 @@
 			<artifactId>log-sentinel-core</artifactId>
 		</dependency>
 
+	<!-- Validations for Properties -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<!-- REQUIRED for Spring Boot starters -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
